--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,10 +6,10 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
-<body>
+<body class="bg-light">
 	<div class="container p-2 rounded"style="background-color:rgba(0, 0, 0, 0.1);">
-        <h1>Friend Face</h1>
-        <h3>For people who need to see friend's faces</h3>
+        <h1 class="mt-4 mb-4 col-3 mx-auto">Friend Face</h1>
+        <h3 class="mt-4 mb-4 col-6 mx-auto">For people who need to see friend's faces</h3>
         <p>Welcome to the newest concept in apps, Friend Face! With this app, you will be able to find people who share select aspects of your personality and become friends with their face! Simply fill out a survey and connect with your new friend's face!</p>
 		
 		<div class="text-center">
